--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
 <p>I'm a web developer and expert in Geographic Information Systems (GIS) with experience in ruby, rails, javascript, html, css, jquery, test driven development (rspec, capybara, jasmine), web mapping, ArcGIS, ArcMap, remote sensing and image analysis. I'm seeking short- and long-term opportunities that make a difference in people's lives, and where I can continue to learn and grow as a developer, scientist, and human person.</p>
 
 <h3>
-<a name="three-recent-projects-i-am-excited-about" class="anchor" href="#three-recent-projects-i-am-excited-about"><span class="octicon octicon-link"></span></a>Three recent projects I am excited about:</h3>
+<a name="some-recent-projects-i-am-excited-about" class="anchor" href="#some-recent-projects-i-am-excited-about"><span class="octicon octicon-link"></span></a>Some recent projects I am excited about:</h3>
 
 <ul>
 <li>Rebioma Maps (codesite: <a href="https://github.com/tomay/rebmaps3">https://github.com/tomay/rebmaps3</a>, live: <a href="http://maps.rebioma.net">http://maps.rebioma.net</a>) 
 Recent refactoring (with <a href="https://github.com/raorao" class="user-mention">@raorao</a>) shows how much I have recently learned.</li>
+<li>Earth Map (codesite: <a href="https://github.com/tomay/earth-map">https://github.com/tomay/earth-map</a>, live: <a href="http://bit.ly/1dbU0Ne">http://bit.ly/1dbU0Ne</a>) 
+An active project in collaboration with Geos Insitute (under active development) aims to show the
+30-40% of the Earth needed to meet conservation goals: . I built the GeoServer
+back-end for tile rendering from raster and vector spatial layers stored in PostGIS, and I am in the
+process of developing the first few of what will be many layers. The front-end uses the Leaflet
+javascript API, with both OSM and Google Maps base tiles, and jQuery animation.
+</li>
 <li>Makeupedia (codesite: <a href="https://github.com/tomay/makeupedia">https://github.com/tomay/makeupedia</a>, live: <a href="http://makeupedia.herokuapp.com/">http://makeupedia.herokuapp.com/</a>) Allows anyone to edit a wikipedia page to amaze their friends and alter reality. Responsive design (using jQuery Mobile); authenticated users can save and share edits to wiki pages.</li>
 <li>Ruby Maxent API (codesite: <a href="https://github.com/tomay/model-manager">https://github.com/tomay/model-manager</a>, in use: <a href="http://data.rebioma.net">http://data.rebioma.net</a>)
 This Ruby library to generate species distribution models from a database of species occurrences and taxonomic names.</li>
