--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tomay.github.io by tomay</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Tomay.github.io : web developer, GIS expert and conservation scientist" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Tomay.github.io</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Tomay.github.io</h1>
-        <p>web developer, GIS expert and conservation scientist</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/tomay">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/tomay">View My GitHub Profile</a></p>
+          <h1 id="project_title">Tomay.github.io</h1>
+          <h2 id="project_tagline">web developer, GIS expert and conservation scientist</h2>
 
-      </header>
-      <section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
 
@@ -34,23 +38,22 @@
 <ul>
 <li>Rebioma Maps (codesite: <a href="https://github.com/tomay/rebmaps3">https://github.com/tomay/rebmaps3</a>, live: <a href="http://maps.rebioma.net">http://maps.rebioma.net</a>) 
 Recent refactoring (with <a href="https://github.com/raorao" class="user-mention">@raorao</a>) shows how much I have recently learned.</li>
-<li>Earth Map (codesite: <a href="https://github.com/tomay/earth-map">https://github.com/tomay/earth-map</a>, live: <a href="http://bit.ly/1dbU0Ne">http://bit.ly/1dbU0Ne</a>) 
-An active project in collaboration with Geos Insitute (under active development) aims to show the
-30-40% of the Earth needed to meet conservation goals: . I built the GeoServer
-back-end for tile rendering from raster and vector spatial layers stored in PostGIS, and I am in the
-process of developing the first few of what will be many layers. The front-end uses the Leaflet
-javascript API, with both OSM and Google Maps base tiles, and jQuery animation.
-</li>
+<li>Earth Map (codesite: <a href="https://github.com/tomay/earth-map">https://github.com/tomay/earth-map</a>, live: <a href="http://bit.ly/1dbU0Ne">http://bit.ly/1dbU0Ne</a>) An active project in collaboration with Geos Insitute (under heavy development) aims to show the 30-40% of the Earth needed to meet conservation goals. I built the GeoServer back-end (currently hosted on a Digital Ocean Ubuntu 12.04 instance) for tile rendering from raster and vector spatial layers stored in PostGIS, and I am in the process of developing the first few of what will be many layers. The front-end uses the Leaflet javascript API, with both OSM and Google Maps base tiles, and jQuery animation.</li>
 <li>Makeupedia (codesite: <a href="https://github.com/tomay/makeupedia">https://github.com/tomay/makeupedia</a>, live: <a href="http://makeupedia.herokuapp.com/">http://makeupedia.herokuapp.com/</a>) Allows anyone to edit a wikipedia page to amaze their friends and alter reality. Responsive design (using jQuery Mobile); authenticated users can save and share edits to wiki pages.</li>
 <li>Ruby Maxent API (codesite: <a href="https://github.com/tomay/model-manager">https://github.com/tomay/model-manager</a>, in use: <a href="http://data.rebioma.net">http://data.rebioma.net</a>)
 This Ruby library to generate species distribution models from a database of species occurrences and taxonomic names.</li>
 </ul>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
