--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
 
-<p>I'm a web developer and expert in Geographic Information Systems (GIS) with experience in ruby, rails, javascript, html, css, jquery, test driven development (rspec, capybara, jasmine), web mapping, ArcGIS, ArcMap, remote sensing and image analysis. I'm seeking short- and long-term opportunities that make a difference in people's lives, and where I can continue to learn and grow as a developer, scientist, and human person.</p>
+<p>I'm a web developer and Geographic Information Systems (GIS) professional with experience in Ruby, Python, PHP, Rails, JavaScript, HTML, CSS, jQuery, React, D3, test driven development (rspec, capybara, jasmine), web mapping, ArcGIS, ArcMap, remote sensing and image analysis. I'm seeking short- and long-term opportunities that make a difference, and where I can continue to learn and grow as a developer, scientist, and human person.</p>
+
+<p>I currently work for GreenInfo Network. Check <a href="http://www.greeninfo.org/about/staff/tom-allnutt">the staff page</a> for recent work</p>
 
 <h3>
 <a name="some-recent-projects-i-am-excited-about" class="anchor" href="#some-recent-projects-i-am-excited-about"><span class="octicon octicon-link"></span></a>Some recent projects I am excited about:</h3>
 
 <ul>
-<li>Rebioma Maps (codesite: <a href="https://github.com/tomay/rebmaps3">https://github.com/tomay/rebmaps3</a>, live: <a href="http://maps.rebioma.net">http://maps.rebioma.net</a>) 
-Recent refactoring (with <a href="https://github.com/raorao" class="user-mention">@raorao</a>) shows how much I have recently learned.</li>
-<li>Earth Map (codesite: <a href="https://github.com/tomay/earth-map">https://github.com/tomay/earth-map</a>, live: <a href="http://bit.ly/1dbU0Ne">http://bit.ly/1dbU0Ne</a>) An active project in collaboration with Geos Insitute (under heavy development) aims to show the 30-40% of the Earth needed to meet conservation goals. I built the GeoServer back-end (currently hosted on a Digital Ocean Ubuntu 12.04 instance) for tile rendering from raster and vector spatial layers stored in PostGIS, and I am in the process of developing the first few of what will be many layers. The front-end uses the Leaflet javascript API, with both OSM and Google Maps base tiles, and jQuery animation.</li>
-<li>Makeupedia (codesite: <a href="https://github.com/tomay/makeupedia">https://github.com/tomay/makeupedia</a>, live: <a href="http://makeupedia.herokuapp.com/">http://makeupedia.herokuapp.com/</a>) Allows anyone to edit a wikipedia page to amaze their friends and alter reality. Responsive design (using jQuery Mobile); authenticated users can save and share edits to wiki pages.</li>
+<li>Women's Well-Being Index (live: <a href="http://calbudgetcenter.org/resources/womens-well-being/">http://calbudgetcenter.org/resources/womens-well-being/</a>).A project for the Cal Budget Center and GreenInfo Network that uses D3 to map and visualize demographic data across California counties</li>
+<li>Google Drive-GeoSheets (codesite: <a href="https://github.com/tomay/geosheets">https://github.com/tomay/geosheets</a>). A ruby An app to generate geojson, or a simple Leaflet map, from public Google Drive spreadsheets.
 <li>Ruby Maxent API (codesite: <a href="https://github.com/tomay/model-manager">https://github.com/tomay/model-manager</a>, in use: <a href="http://data.rebioma.net">http://data.rebioma.net</a>)
 This Ruby library to generate species distribution models from a database of species occurrences and taxonomic names.</li>
 </ul>
