update the index page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/tomay">View on GitHub</a>
 
           <h1 id="project_title">Tomay.github.io</h1>
-          <h2 id="project_tagline">web developer, GIS expert and conservation scientist</h2>
+          <h2 id="project_tagline">web developer, GIS professional and conservation geographer</h2>
 
         </header>
     </div>
